Fix long links causing overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,7 @@
     height: unset !important;
   }
 }
+
+p {
+  overflow-wrap: break-word;
+}
